--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 
             </video>
         </section>
+        <aside>
+            <h2>Latest News</h2>
+            <p>Stay tuned for updates and guest speaker announcements!</p>
+        </aside>
     </main>
     <footer>
         <p>&copy; 2024 TechCon. All rights reserved. Copyright 2024.</p>
