--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechCon 2024</title>
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="works_on_smartphone">
 
     <header>
         <h1>TechCon 2024</h1>
