--- a/index.html
+++ b/index.html
@@ -2,42 +2,52 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechCon 2024</title>
-    <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TechCon 2024</title>
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body class="works_on_smartphone">
 
-    <header>
-        <h1>TechCon 2024</h1>
-        <nav>
-            <a href="about.html">about</a>
-            <a href="contact.html">contact</a>
-            <a href="register.html">register</a>
-            <a href="schedule.html">schedule</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <p>Welcome to TechCon 2024 — a global event for technology innovators</p>
-            <video controls>
-                <source src="techcon2024.mp4" type="video/mp4">
+  <header>
+    <nav>
+      <ul>
+        <li class="logo">&#128640;</li> <!-- 🚀 شكل اللوجو -->
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+      </ul>
+    </nav>
+    <h1>TechCon 2024</h1>
+  </header>
 
-            </video>
-        </section>
-        <aside>
-            <h2>Latest News</h2>
-            <p>Stay tuned for updates and guest speaker announcements!</p>
-        </aside>
-    </main>
-    <footer>
-        <p>&copy; 2024 TechCon. All rights reserved. Copyright 2024.</p>
-    </footer>
+  <main>
+    <article>
+      <h2>Welcome to TechCon 2024</h2>
+      <p>TechCon 2024 is the world’s leading conference for technology innovators, engineers, and creators. Join us to
+        explore the latest in AI, cloud computing, and sustainable tech innovation.</p>
+
+      <video controls>
+        <source src="techcon2024.mp4" type="video/mp4">
+      </video>
+    </article>
+
+    <aside>
+      <h3>Latest News</h3>
+      <ul>
+        <li>🔹 Early bird registration now open!</li>
+        <li>🔹 Keynote: “The Future of AI” by Dr. Lin Zhao</li>
+        <li>🔹 New startup competition announced</li>
+      </ul>
+    </aside>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
+  </footer>
 
 </body>
-
 </html>
